Improved contrast on social buttons, improved skills button hover state and prevented page scroll when a modal is displayed

--- a/_sass/blocks/contact.scss
+++ b/_sass/blocks/contact.scss
@@ -9,11 +9,11 @@
 
   svg {
     transition: all ease 200ms;
-    fill: $color-light-text;
+    fill: $color-dark-text;
   }
 
   a {
-    color: $color-light-text;
+    color: $color-dark-text;
     transition: all ease 200ms;
 
     &:hover {
