--- a/_sass/blocks/skills.scss
+++ b/_sass/blocks/skills.scss
@@ -8,6 +8,13 @@
   svg {
     fill: $color;
   }
+
+  &:hover {
+    .category__more {
+      color: $color;
+      border-color: $color;
+    }
+  }
 }
 
 // Skills block
@@ -57,8 +64,7 @@
       opacity: 1;
 
       .category__more {
-        background: rgba($background-dark, 0.2);
-        transition: background 200ms ease;
+        background: transparent;
       }
     }
 
@@ -137,10 +143,13 @@
     display: block;
     margin: 1rem auto auto;
     padding: 0.25rem 0.5rem;
-    border: none;
+    border: 2px solid;
+    border-color: transparent;
     border-radius: $radius-s;
     background: $background-light-alt;
     cursor: pointer;
+    transition: all 200ms ease;
+
   }
 }
 
